manifest/network_policy/nginx_backend.yml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: nginx
      ports:
        - containerPort: 80
