manifest/network_policy/test_client.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
  labels:
    app: client
spec:
  containers:
    - name: client
      image: busybox
      command: ["sh", "-c", "sleep 3600"]
